--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.90.20",
@@ -85,6 +86,8 @@
     "swiper": "^12.1.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
+    "use-sound": "^5.0.0",
+    "usehooks-ts": "^3.1.1",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.3.6",
